English Dolibarr changelog


***** Changelog for 2.7 compared to 2.6 *****

For users:
- New: Add a help and support center.
- New: Can export commercial proposals.
- New: Can use a cache for xcal exports.
- New: Option for faster confirmation process with one ajax popup.
- New: Complete theme bluelagoon and rodolphe
- New: Can select third parties emails in emailing module for all
       third parties with expired contract's lines.
- New: Can add a field errors-to in emailing.
- New: Can use inline images in emails.
- New: Add predefined invoices (can be use for repeated invoices).
- New: Add a confirmation when cloning products.
- New: Add stock in product lists.
- New: Can filter list of stock movement on date or product.
- New: Added a link from product list to their stock movements.
- New: Several speed enhancements after using the Google Page speed 
  plugin for FireBug.
- Fix: Fix payment conditions on commercial proposals.
- Fix: Nb of orders to process was wrong.
- Fix: Customer code was not correct on PDF it if contains special 
       characters.
- Fix: Can update price even with "NPR" VAT rates.
- Fix: When product type is missing, description is not lost when adding 
       new product lines.
- Fix: CC and BCC in emails was not used if using SMTPS handler.
- Fix: Last character was lost when text end with n or r.

For translators:
- Update some language files.

For developers:
- Update fckeditor to 2.6.4.
- Removed some deprecated files.
- Creation of directory in module descriptor is simpler.
- Can use an alternate document_root directory to develop with 
  sources on two repositories.
- Removed useless code of old commercial module.
- Updated wiki documentation.
- Better W3C standard.
- Can add data provided with a module.
- Can fix some corruptions in database by calling the update page with action=repair


***** Changelog for 2.6 compared to 2.5 *****

For users:
- New: Add filter on status in emailing selector for Dolibarr users.